<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
      android:id="@+id/toolbarBinding"
      layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/fragment_main_nav_tab_layout"
            android:orientation="horizontal">

            <fr.free.nrw.commons.contributions.UnswipableViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <fr.free.nrw.commons.navtab.NavTabLayout
            android:id="@+id/fragment_main_nav_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="?attr/nav_bar_background"
            android:elevation="6dp"
            app:itemIconTint="?attr/nav_tab_item_color_state"
            app:itemTextColor="?attr/navbar_item_text_color" />
    </RelativeLayout>
</LinearLayout>

