...
  <string name="menu_upload_single">Upload</string>
  <string name="categories_search_text_hint">Search categories</string>
  <string name="depicts_search_text_hint">Search for items that your media depicts (mountain, Taj Mahal, etc.)</string>
  <string name="menu_save_categories">Save</string>
  <string name="menu_overflow_desc">Overflow menu</string>
  <string name="refresh_button">Refresh</string>
  <string name="display_list_button">List</string>
  <string name="contributions_subtitle_zero">(No uploads yet)</string>
  <string name="categories_not_found">No categories matching %1$s found</string>
  <string name="depictions_not_found">No Wikidata items matching %1$s found</string>
  <string name="no_child_classes">%1$s has no child classes</string>
  <string name="no_parent_classes">%1$s has no parent classes</string>
  <string name="categories_skip_explanation">Add categories to make your images more discoverable on Wikimedia Commons.\nStart typing to add categories.</string>
...
  <string name="notifications_channel_name_all">Commons Notification</string>
  <string name="preference_author_name_toggle">Use custom author name</string>
  <string name="preference_author_name_toggle_summary">Use a custom author name instead of your username while uploading photos</string>
  <string name="preference_author_name">Custom author name</string>
  <string name="contributions_fragment">Contributions</string>
  <string name="nearby_fragment">Nearby</string>
  <string name="notifications">Notifications</string>
  <string name="read_notifications">Notifications (read)</string>
  <string name="display_nearby_notification">Display nearby notification</string>
  <string name="display_nearby_notification_summary">Show in-app notification for the nearest place that needs pictures</string>

  <string name="list_sheet">List</string>
  <string name="storage_permission">Storage Permission</string>

  <string name="write_storage_permission_rationale_for_image_share">We need your permission to access the external storage of your device in order to upload images.</string>
  <string name="nearby_notification_dismiss_message">You won\'t see the nearest place that needs pictures anymore. However, you can re-enable this notification in Settings if you wish.</string>
  <string name="step_count">Step %1$d of %2$d: %3$s</string>
  <string name="next">Next</string>
...
