<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bookmark_current_image"
        android:icon="@drawable/menu_ic_round_star_border_24px"
        android:title="@string/menu_bookmark"
        app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_share_current_image"
      android:icon="@drawable/menu_ic_copy_link_24dp"
...
