...
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/previous"
      android:text="@string/previous" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/next"
      android:text="@string/next"
      android:textColor="@android:color/white" />
...
