...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="false"
        android:overScrollMode="never">

        <LinearLayout
          android:id="@+id/ll_container_media_detail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <LinearLayout
            android:id="@+id/ll_container_actions"
...

          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/btn_next"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:alpha=".5"
              android:enabled="false"
              android:text="@string/next"
...
