<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/item_refresh"
    android:title="Refresh"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_refresh_24dp_nearby" />

  <item android:id="@+id/list_sheet"
    android:title="@string/list_sheet"
    app:showAsAction="ifRoom|withText"
    android:icon="@drawable/ic_list_white_24dp"
    />

  <item android:id="@+id/list_item_show_in_explore"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="@string/show_in_explore"
    />

  <item android:id="@+id/list_item_gpx"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="Save as GPX file" />

  <item android:id="@+id/list_item_kml"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="Save as KML file" />

</menu>
